--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test:watch": "bun test --watch",
     "lint": "eslint src tests",
     "lint:fix": "eslint src tests --fix",
-    "prepublishOnly": "bun run build",
-    "prepare": "husky install"
+    "prepublishOnly": "bun run build"
   },
   "keywords": [
     "vite",
