--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
-        run: bun install
+        run: bun install --frozen-lockfile
 
       - name: Build
         run: bun run build
@@ -40,10 +40,7 @@ jobs:
           generate_release_notes: true
           draft: false
           prerelease: false
-
-      - name: Configure npm registry auth
-        run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
+          files: ""
 
       - name: Publish to npm
         run: npm publish --access public
