--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@catfyrr/vite-plugin-ssi",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Fully Apache/Nginx compatible Server-Side Includes (SSI) Vite plugin",
   "type": "module",
   "exports": {
@@ -44,7 +44,7 @@
     "url": "https://github.com/catFurr/vite-plugin-ssi/issues"
   },
   "homepage": "https://github.com/catFurr/vite-plugin-ssi#readme",
-  "dependencies": {
+  "peerDependencies": {
     "vite": "^5.0.0"
   },
   "devDependencies": {
@@ -57,6 +57,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "prettier": "^3.1.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vite": "^5.0.0"
   }
 }
